adding parabola calculator and functionality

--- a/index.html
+++ b/index.html
@@ -649,201 +649,275 @@
 					</div>
 				</div>
 				<div class="row">
-						<div class="col-lg-5 col-md-5 col-sm-10 calc-container" id="cone-calc-container">
-							<h3>
-								Cone
-							</h3>
-							<div class="input-container">
-								<label for="cone-PI">
-									PI:
-								</label>
-								<br>
-								<input id="cone-pi" class="input" type="number" name="cone-PI" value="3.142857142857143" readonly>
-							</div>
-							<div class="input-container">
-								<label for="cone-radius">
-									Radius-( r ):
-								</label><br>
-								<input id="cone-radius" class="input" type="number" name="cone-radius" placeholder="radius">
-							</div>
-							<div class="input-container">
-								<label for="cone-slant-height">
-									Slant-Height-( l ):
-								</label>
-								<br>
-								<input id="cone-slant-height" class="input" type="number" name="cone-slant-height" placeholder="slant-height">
-							</div>
-							<div class="input-container">
-								<label for="cone-height">
-									Height-( h ):
-								</label>
-								<br>
-								<input id="cone-height" class="input" type="number" name="cone-height" placeholder="height">
-							</div>
-							<div class="input-container">
-								<label for="cone-circumference">
-									Circular Base Circumference-( C ) =
-									<small>
-										( 2 x PI x r )
-									</small>
-								</label>
-								<br>
-								<input id="cone-circumference" class="input" type="number" name="cone-csa" placeholder="circumference">
-							</div>
-							<div class="input-container">
-								<label for="cone-cba">
-									Circular Base Area-( CBA ) =
-									<small>
-										( PI x r<sup>2</sup> )
-									</small>
-								</label>
-								<br>
-								<input id="cone-cba" class="input" type="number" name="cone-cba" placeholder="circular base area">
-							</div>
-							<div class="input-container">
-								<label for="cone-csa">
-									Curved Surface Area-( CSA ) =
-									<small>
-										( PI x r x l )
-									</small>
-								</label>
-								<br>
-								<input id="cone-csa" class="input" type="number" name="cone-csa" placeholder="curved surface area">
-							</div>
-							<div class="input-container">
-								<label for="cone-tsa">
-									Total Surface Area-( TSA ) =
-									<small>
-										( PI x r( r + l ))
-									</small>
-								</label>
-								<br>
-								<input id="cone-tsa" class="input" type="number" name="cone-tsa" placeholder="total surface area">
-							</div>
-							<div class="input-container">
-								<label for="cone-vol">
-									Volume-( V ) =
-									<small>
-										( PI x r<sup>2</sup> x h )
-									</small>
-								</label>
-								<br>
-								<input id="cone-vol" class="input" type="number" name="cone-vol" placeholder="volume">
-							</div>
-							<div class="submit-wrap d-flex justify-content-between">
-								<button id="submit-cone" class="input submit">answer</button>
-								<button id="reset-cone" class="input submit">reset</button>
-							</div>
+					<div class="col-lg-5 col-md-5 col-sm-10 calc-container" id="cone-calc-container">
+						<h3>
+							Cone
+						</h3>
+						<div class="input-container">
+							<label for="cone-PI">
+								PI:
+							</label>
+							<br>
+							<input id="cone-pi" class="input" type="number" name="cone-PI" value="3.142857142857143" readonly>
 						</div>
-						<div class="col-lg-5 col-md-5 col-sm-10 calc-container" id="cylinder-calc-container">
-							<h3>
-								Cylinder
-							</h3>
-							<div class="input-container">
-								<label for="cyl-PI">
-									PI:
-								</label>
-								<br>
-								<input id="cyl-pi" class="input" type="number" name="cyl-PI" value="3.142857142857143" readonly>
-							</div>
-							<div class="input-container">
-								<label for="cyl-radius">
-									Radius-( r ):
-								</label><br>
-								<input id="cyl-radius" class="input" type="number" name="cyl-radius" placeholder="radius">
-							</div>
-							<div class="input-container">
-								<label for="cyl-height">
-									Height-( h ):
-								</label>
-								<br>
-								<input id="cyl-height" class="input" type="number" name="cyl-height" placeholder="height">
-							</div>
-							<div class="input-container">
-								<label for="cyl-circumference">
-									Circular Base/Top Circumference-( C ) =
-									<small>
-										( 2 x PI x r )
-									</small>
-								</label>
-								<br>
-								<input id="cyl-circumference" class="input" type="number" name="cyl-csa" placeholder="circumference">
-							</div>
-							<div class="input-container">
-								<label for="cyl-cba">
-									Circular Base/Top Area-( CBA ) =
-									<small>
-										( PI x r<sup>2</sup> )
-									</small>
-								</label>
-								<br>
-								<input id="cyl-cba" class="input" type="number" name="cyl-cba" placeholder="circular base area">
-							</div>
-							<div class="input-container">
-								<label for="cyl-csa">
-									Curved Surface Area-( CSA ) =
-									<small>
-										( 2 x PI x r x h )
-									</small>
-								</label>
-								<br>
-								<input id="cyl-csa" class="input" type="number" name="cyl-csa" placeholder="curved surface area">
-							</div>
-							<div class="input-container">
-								<label for="cyl-tsa">
-									Total Surface Area-( TSA ) =
-									<small>
-										( 2 x PI x r( r + h ))
-									</small>
-								</label>
-								<br>
-								<input id="cyl-tsa" class="input" type="number" name="cyl-tsa" placeholder="total surface area">
-							</div>
-							<div class="input-container">
-								<label for="cyl-vol">
-									Volume-( V ) =
-									<small>
-										( PI x r<sup>2</sup> x h )
-									</small>
-								</label>
-								<br>
-								<input id="cyl-vol" class="input" type="number" name="cyl-vol" placeholder="volume">
-							</div>
-							<div class="submit-wrap d-flex justify-content-between">
-								<button id="submit-cyl" class="input submit">answer</button>
-								<button id="reset-cyl" class="input submit">reset</button>
-							</div>
+						<div class="input-container">
+							<label for="cone-radius">
+								Radius-( r ):
+							</label><br>
+							<input id="cone-radius" class="input" type="number" name="cone-radius" placeholder="radius">
+						</div>
+						<div class="input-container">
+							<label for="cone-slant-height">
+								Slant-Height-( l ):
+							</label>
+							<br>
+							<input id="cone-slant-height" class="input" type="number" name="cone-slant-height" placeholder="slant-height">
+						</div>
+						<div class="input-container">
+							<label for="cone-height">
+								Height-( h ):
+							</label>
+							<br>
+							<input id="cone-height" class="input" type="number" name="cone-height" placeholder="height">
+						</div>
+						<div class="input-container">
+							<label for="cone-circumference">
+								Circular Base Circumference-( C ) =
+								<small>
+									( 2 x PI x r )
+								</small>
+							</label>
+							<br>
+							<input id="cone-circumference" class="input" type="number" name="cone-csa" placeholder="circumference">
+						</div>
+						<div class="input-container">
+							<label for="cone-cba">
+								Circular Base Area-( CBA ) =
+								<small>
+									( PI x r<sup>2</sup> )
+								</small>
+							</label>
+							<br>
+							<input id="cone-cba" class="input" type="number" name="cone-cba" placeholder="circular base area">
+						</div>
+						<div class="input-container">
+							<label for="cone-csa">
+								Curved Surface Area-( CSA ) =
+								<small>
+									( PI x r x l )
+								</small>
+							</label>
+							<br>
+							<input id="cone-csa" class="input" type="number" name="cone-csa" placeholder="curved surface area">
+						</div>
+						<div class="input-container">
+							<label for="cone-tsa">
+								Total Surface Area-( TSA ) =
+								<small>
+									( PI x r( r + l ))
+								</small>
+							</label>
+							<br>
+							<input id="cone-tsa" class="input" type="number" name="cone-tsa" placeholder="total surface area">
+						</div>
+						<div class="input-container">
+							<label for="cone-vol">
+								Volume-( V ) =
+								<small>
+									( PI x r<sup>2</sup> x h )
+								</small>
+							</label>
+							<br>
+							<input id="cone-vol" class="input" type="number" name="cone-vol" placeholder="volume">
+						</div>
+						<div class="submit-wrap d-flex justify-content-between">
+							<button id="submit-cone" class="input submit">answer</button>
+							<button id="reset-cone" class="input submit">reset</button>
 						</div>
 					</div>
+					<div class="col-lg-5 col-md-5 col-sm-10 calc-container" id="cylinder-calc-container">
+						<h3>
+							Cylinder
+						</h3>
+						<div class="input-container">
+							<label for="cyl-PI">
+								PI:
+							</label>
+							<br>
+							<input id="cyl-pi" class="input" type="number" name="cyl-PI" value="3.142857142857143" readonly>
+						</div>
+						<div class="input-container">
+							<label for="cyl-radius">
+								Radius-( r ):
+							</label><br>
+							<input id="cyl-radius" class="input" type="number" name="cyl-radius" placeholder="radius">
+						</div>
+						<div class="input-container">
+							<label for="cyl-height">
+								Height-( h ):
+							</label>
+							<br>
+							<input id="cyl-height" class="input" type="number" name="cyl-height" placeholder="height">
+						</div>
+						<div class="input-container">
+							<label for="cyl-circumference">
+								Circular Base/Top Circumference-( C ) =
+								<small>
+									( 2 x PI x r )
+								</small>
+							</label>
+							<br>
+							<input id="cyl-circumference" class="input" type="number" name="cyl-circumference" placeholder="circumference">
+						</div>
+						<div class="input-container">
+							<label for="cyl-cba">
+								Circular Base/Top Area-( CBA ) =
+								<small>
+									( PI x r<sup>2</sup> )
+								</small>
+							</label>
+							<br>
+							<input id="cyl-cba" class="input" type="number" name="cyl-cba" placeholder="circular base area">
+						</div>
+						<div class="input-container">
+							<label for="cyl-csa">
+								Curved Surface Area-( CSA ) =
+								<small>
+									( 2 x PI x r x h )
+								</small>
+							</label>
+							<br>
+							<input id="cyl-csa" class="input" type="number" name="cyl-csa" placeholder="curved surface area">
+						</div>
+						<div class="input-container">
+							<label for="cyl-tsa">
+								Total Surface Area-( TSA ) =
+								<small>
+									( 2 x PI x r( r + h ))
+								</small>
+							</label>
+							<br>
+							<input id="cyl-tsa" class="input" type="number" name="cyl-tsa" placeholder="total surface area">
+						</div>
+						<div class="input-container">
+							<label for="cyl-vol">
+								Volume-( V ) =
+								<small>
+									( PI x r<sup>2</sup> x h )
+								</small>
+							</label>
+							<br>
+							<input id="cyl-vol" class="input" type="number" name="cyl-vol" placeholder="volume">
+						</div>
+						<div class="submit-wrap d-flex justify-content-between">
+							<button id="submit-cyl" class="input submit">answer</button>
+							<button id="reset-cyl" class="input submit">reset</button>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="col-lg-5 col-md-5 col-sm-10 calc-container" id="parabola-calc-container">
+							<h3>
+								Parabola
+							</h3>
+							<div class="input-container">
+								<label for="parabola-x2">
+									coefficient of X<sup>2</sup>:
+								</label>
+								<br>
+								<input id="parabola-x2" class="input" type="number" name="parabola-x2" placeholder="coefficient of x2">
+							</div>
+							<div class="input-container">
+								<label for="parabola-x">
+									coefficient of X:
+								</label><br>
+								<input id="parabola-x" class="input" type="number" name="parabola-x" placeholder="coefficient of x">
+							</div>
+							<div class="input-container">
+								<label for="paraquad-num">
+									Parabola Quadriatic Number:
+								</label>
+								<br>
+								<input id="paraquad-num" class="input" type="number" name="paraquad-num" placeholder="quad-number">
+							</div>
+							<div class="input-container">
+								<label for="parabola-a">
+									Parabola-a:
+								</label>
+								<br>
+								<input id="parabola-a" class="input" type="number" name="parabola-a" placeholder="a">
+							</div>
+							<div class="input-container">
+								<label for="parabola-h">
+									Parabola-h
+								</label>
+								<br>
+								<input id="parabola-h" class="input" type="number" name="parabola-h" placeholder="h">
+							</div>
+							<div class="input-container">
+								<label for="parabola-k">
+									Parabola-K:
+								</label>
+								<br>
+								<input id="parabola-k" class="input" type="number" name="parabola-k" placeholder="k">
+							</div>
+							<div class="input-container">
+								<label for="parabola-vertex">
+									Parabola Vertex:
+								</label>
+								<br>
+								<input id="parabola-vertex" class="input" type="text" name="parabola-vertex" placeholder="(h,k)">
+							</div>
+							<div class="input-container">
+								<label for="parabola-axis">
+									Axis of Symentry:
+								</label>
+								<br>
+								<input id="parabola-axis" class="input" type="text" name="parabola-axis" placeholder="axis of symmetry">
+							</div>
+							<div class="input-container">
+								<label for="parabola-formular">
+									Formular/Equation:
+									<small>y = a ( x + h )<sup>2</sup> + k</small>
+								</label>
+								<br>
+								<input id="parabola-formular" class="input" type="text" name="parabola-formular" placeholder="y = a ( x + h )sq. + k">
+							</div>
+							<div class="input-container">
+								<label for="x-intercepts">
+									X-intercepts:
+								</label>
+								<br>
+								<input id="x-intercepts" class="input" type="text" name="x-intercepts" placeholder="x-intercepts">
+							</div>
+							<div class="input-container">
+								<label for="y-intercepts">
+									Y-intercepts:
+								</label>
+								<br>
+								<input id="y-intercepts" class="input" type="text" name="y-intercepts" placeholder="y-intercepts">
+							</div>
+							<div class="submit-wrap d-flex justify-content-between">
+								<button id="submit-parabola" class="input submit">answer</button>
+								<button id="reset-parabola" class="input submit">reset</button>
+							</div>
+						</div>
+				</div>
 			</div>
 			<div id="about-container">
 				<h3>
 					Al-Aleem Academy Mathematics lab
 				</h3>
-					<article class="article">
-						<h2 class="article-head p-2 my-flex-item" title="maths lab team">
-							Objectives, Goals and Aims.
-						</h2>
-						<p style="font-size: 10pt; padding-left: 10px; color: lightgray; letter-spacing: 2px; word-spacing: 4px;">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</p>
-					</article>
-					<div class="d-flex flex-row flex-wrap flex-container">
-					<article class="article">
+				<div class="d-flex flex-row flex-wrap flex-container">
+					<article class="article col-5 my-flex-item">
 						<img width="150" height="150" src="img/Adewale.png">
 						<h2 title="developer">
 							Mr. (Dev.) Abdulsamad Adewale
 						</h2>
 					</article>
-					<article class="article">
-						<img class="img" src="img/ss3ac.jpg">
-						<h2 class="article-head" title="JS">
-							Maths lab Team
+					<article class="article col-7 my-flex-item">
+						<h2 class="article-head p-2 my-flex-item" title="maths lab team">
+							Objectives, Goals and Aims.
 						</h2>
 						<p style="font-size: 10pt; padding-left: 10px; color: lightgray; letter-spacing: 2px; word-spacing: 4px;">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
